# ephemeris

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.githooks/: post-commit  pre-commit
ephemeris-cmd/: Cargo.toml
ephemeris-cmd/src/: main.rs  projects.rs  repl.rs  tags.rs  tasks.rs  time.rs
ephemeris-gtk/: Cargo.toml
ephemeris-gtk/src/: main.rs
ephemeris-gtk/src/gui/: main.rs  mod.rs
ephemeris-lib/: Cargo.toml
ephemeris-lib/src/: lib.rs  projects.rs  state.rs  store.rs  tasks.rs  time.rs
scripts/: owninstall.sh  release.sh
