[package]
name = "ephemeris-cmd"
version = "0.2.0"
authors = ["Antony Vennard <antony@vennard.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ephemeris"
path = "src/main.rs"


[dependencies]
chrono = {version = "^0.4.19", features=["serde"]}
chrono-tz = "^0.5.3"
clap = {version = "3.2.8", features = ["derive","suggestions", "color" ]}
clap_complete = {version = "3.2.3"}
proc-macro2 = {version = "1.0.36"}
prettytable-rs = "^0.8"
rustyline = "8.2.0"
human-panic = "^1.0.3"
ephemeris = {path = "../ephemeris-lib"}
