[package]
name = "ephemeris"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
chrono = {version = "^0.4.19", features=["serde"]}
chrono-tz = "^0.5.3"
dirs = "3.0"
getrandom = "0.2"
regex = "^1"
serde = {version="^1.0.97", features=["rc"]}
serde_derive = {version="^1.0"}
toml = "^0.5"
zoneinfo_parse = "^0.1.4"
